--- a/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
@@ -12,7 +12,9 @@
         android:layout_width="@dimen/day_circle_width"
         android:layout_height="@dimen/day_circle_height"
         android:gravity="center"
-        android:textSize="13sp"
+        android:textSize="16sp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:textColor="@android:color/black"
         android:background="@android:color/transparent" />
 
