--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -62,21 +62,21 @@
     <LinearLayout
         android:id="@+id/cl_title"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
             android:layout_gravity="center"
-            android:paddingBottom="12dp"
-            android:paddingTop="10dp"
             android:gravity="center"
+            android:paddingStart="12dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="12dp"
+            android:paddingBottom="12dp"
             android:textColor="@android:color/black"
-            android:textSize="16sp"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Jun 2015" />
@@ -85,8 +85,8 @@
             android:id="@+id/expandIcon"
             android:layout_width="20dp"
             android:layout_height="30dp"
-            android:visibility="visible"
             android:layout_gravity="center"
+            android:visibility="visible"
             app:eiv_animationDuration="300"
             app:eiv_color="#000"
             app:eiv_colorIntermediate="@android:color/black"
@@ -94,20 +94,38 @@
             app:eiv_colorMore="@android:color/black"
             app:eiv_roundedCorners="true"
             app:eiv_switchColor="true" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <ImageView
             android:id="@+id/today_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:padding="10dp"
             android:layout_gravity="center"
+            android:layout_marginEnd="2dp"
             android:clickable="true"
             android:foreground="?android:selectableItemBackgroundBorderless"
+            android:padding="10dp"
+            android:src="@drawable/ic_today_white_40dp" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="0.1" />
+
+        <ImageView
+            android:id="@+id/setting_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:layout_marginEnd="2dp"
-            android:src="@drawable/ic_calendar" />
+            android:clickable="true"
+            android:foreground="?android:selectableItemBackgroundBorderless"
+            android:padding="10dp"
+            android:src="@drawable/ic_settings_white_40dp" />
 
     </LinearLayout>
 
@@ -117,6 +135,7 @@
         android:layout_height="wrap_content">
 
     </TableLayout>
+
     <com.shrikanthravi.collapsiblecalendarview.view.LockScrollView
         android:id="@+id/scroll_view_body"
         android:layout_width="match_parent"
