Calendar month font size changed

--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -63,6 +63,8 @@
         android:id="@+id/cl_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:orientation="horizontal">
 
         <TextView
@@ -76,7 +78,7 @@
             android:paddingEnd="12dp"
             android:paddingBottom="12dp"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:textSize="22sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Jun 2015" />
@@ -126,6 +128,11 @@
             android:foreground="?android:selectableItemBackgroundBorderless"
             android:padding="10dp"
             android:src="@drawable/ic_settings_white_40dp" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="0.1" />
 
     </LinearLayout>
 
