--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -16,7 +16,6 @@
 
         <ImageView
             android:id="@+id/btn_prev_month"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -63,9 +62,9 @@
         android:id="@+id/cl_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:orientation="horizontal">
+        android:paddingBottom="4dp">
 
         <TextView
             android:id="@+id/txt_title"
@@ -121,18 +120,13 @@
         <ImageView
             android:id="@+id/setting_icon"
             android:layout_width="40dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="2dp"
+            android:layout_marginEnd="8dp"
             android:clickable="true"
             android:foreground="?android:selectableItemBackgroundBorderless"
             android:padding="10dp"
             android:src="@drawable/ic_menu_white_40dp" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="0.1" />
 
     </LinearLayout>
 
