--- a/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
@@ -13,8 +13,8 @@
         android:layout_height="@dimen/day_circle_height"
         android:gravity="center"
         android:textSize="16sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:textColor="@android:color/black"
         android:background="@android:color/transparent" />
 
@@ -28,8 +28,8 @@
 
         <ImageView
             android:id="@+id/img_event_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             app:srcCompat="@drawable/dot_icon"
             android:visibility="gone" />
 
