--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -101,21 +101,33 @@
             android:layout_height="1dp"
             android:layout_weight="1" />
 
+        <TextView
+            android:id="@+id/tv_today"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_crop_din_white_48dp"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:layout_marginEnd="4dp"
+            android:textSize="14sp"
+            android:clickable="true"
+            android:foreground="?android:selectableItemBackgroundBorderless"
+            android:text="31"
+            android:focusable="true" />
+
         <ImageView
             android:id="@+id/today_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:visibility="gone"
             android:layout_gravity="center"
-            android:layout_marginEnd="2dp"
+            android:layout_marginEnd="4dp"
             android:clickable="true"
+            android:focusable="true"
+            android:padding="4dp"
             android:foreground="?android:selectableItemBackgroundBorderless"
-            android:padding="10dp"
-            android:src="@drawable/ic_today_white_40dp" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="0.1" />
+            android:src="@drawable/ic_crop_din_white_48dp" />
 
         <ImageView
             android:id="@+id/setting_icon"
@@ -124,9 +136,10 @@
             android:layout_gravity="center"
             android:layout_marginEnd="8dp"
             android:clickable="true"
+            android:padding="4dp"
+            android:focusable="true"
             android:foreground="?android:selectableItemBackgroundBorderless"
-            android:padding="10dp"
-            android:src="@drawable/ic_menu_white_40dp" />
+            android:src="@drawable/ic_menu_white_48dp" />
 
     </LinearLayout>
 
