--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -66,6 +66,24 @@
         android:paddingTop="4dp"
         android:paddingBottom="4dp">
 
+        <ImageView
+            android:id="@+id/setting_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:selectableItemBackgroundBorderless"
+            android:padding="4dp"
+            android:src="@drawable/ic_menu_white_32dp" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" />
+
         <TextView
             android:id="@+id/txt_title"
             android:layout_width="wrap_content"
@@ -78,8 +96,6 @@
             android:paddingBottom="12dp"
             android:textColor="@android:color/black"
             android:textSize="22sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Jun 2015" />
 
         <com.shrikanthravi.collapsiblecalendarview.view.ExpandIconView
@@ -101,45 +117,34 @@
             android:layout_height="1dp"
             android:layout_weight="1" />
 
+
         <TextView
             android:id="@+id/tv_today"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:background="@drawable/ic_crop_din_white_48dp"
-            android:gravity="center"
-            android:textColor="#FFFFFF"
-            android:layout_marginEnd="4dp"
-            android:textSize="14sp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ic_crop_5_4_white_32dp"
             android:clickable="true"
+            android:focusable="true"
             android:foreground="?android:selectableItemBackgroundBorderless"
+            android:gravity="center"
             android:text="31"
-            android:focusable="true" />
+            android:textColor="#FFFFFF"
+            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/today_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:visibility="gone"
-            android:layout_gravity="center"
-            android:layout_marginEnd="4dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="4dp"
-            android:foreground="?android:selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_crop_din_white_48dp" />
-
-        <ImageView
-            android:id="@+id/setting_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginEnd="8dp"
             android:clickable="true"
-            android:padding="4dp"
             android:focusable="true"
             android:foreground="?android:selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_menu_white_48dp" />
+            android:padding="4dp"
+            android:src="@drawable/ic_crop_din_white_48dp"
+            android:visibility="gone" />
 
     </LinearLayout>
 
