--- a/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -121,6 +121,7 @@
         <TextView
             android:id="@+id/tv_today"
             android:layout_width="40dp"
+            android:visibility="invisible"
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginEnd="8dp"
